--- a/Maze/GuiInterface/Views/CaveView.axaml
+++ b/Maze/GuiInterface/Views/CaveView.axaml
@@ -15,50 +15,98 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
         
-        <controls:CaveControl Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0"
+        <controls:CaveControl Grid.Column="0" Grid.Row="0"
             Cave="{Binding Cave}" />
 
-        <Button Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1"
+        <Button Grid.Column="0" Grid.Row="1"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
                 Command="{Binding GenerateCaveCommand}">
             Generate cave
         </Button>
         
-        <TextBlock
-            HorizontalAlignment="Center"
-            FontSize="20"
-            Grid.Row="2"
-            Grid.Column="0">
-            Size of cave
-        </TextBlock>
+        <Grid Grid.Column="0" Grid.Row="2" ColumnDefinitions="*,*,*,*,*,*">
+            <TextBlock
+                Grid.Column="0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="15">
+                Size of cave
+            </TextBlock>
 
-        <NumericUpDown
-            Value="{Binding Size}"
-            Minimum="1"
-            Maximum="{Binding MaxSize, Mode=OneWay}"
-            Grid.Column="1"
-            Grid.Row="2"
-            Increment="1">
-        </NumericUpDown>
-        
-        <Button Grid.Column="0" Grid.Row="3"
-                HorizontalAlignment="Stretch"
+            <NumericUpDown
+                Grid.Column="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
-                Command="{Binding ImportCaveFromFileCommand}">
-            Import
-        </Button>
-        
-        <Button Grid.Column="1" Grid.Row="3"
-                HorizontalAlignment="Stretch"
+                VerticalContentAlignment="Center"
+                Value="{Binding Size}"
+                Minimum="1"
+                Maximum="{Binding MaxSize, Mode=OneWay}"
+                Increment="1"
+                FontSize="10">
+            </NumericUpDown>
+            
+            <TextBlock
+                Grid.Column="2"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="15">
+                Life limit
+            </TextBlock>
+
+            <NumericUpDown
+                Grid.Column="3"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
-                Command="{Binding ExportCaveToFileCommand}">
-            Export
-        </Button>
+                VerticalContentAlignment="Center"
+                Value="{Binding Size}"
+                Minimum="1"
+                Maximum="{Binding LifeLimit, Mode=OneWay}"
+                Increment="1"
+                FontSize="10">
+            </NumericUpDown>
+            
+            <TextBlock
+                Grid.Column="4"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="15">
+                Dead limit
+            </TextBlock>
+
+            <NumericUpDown
+                Grid.Column="5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center"
+                Value="{Binding Size}"
+                Minimum="1"
+                Maximum="{Binding DeadLimit, Mode=OneWay}"
+                Increment="1"
+                FontSize="10">
+            </NumericUpDown>
+        </Grid>
+        
+        <Grid Grid.Row="3">
+            <Button
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Command="{Binding ImportCaveFromFileCommand}">
+                Import
+            </Button>
+            
+            <Button
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Command="{Binding ExportCaveToFileCommand}">
+                Export
+            </Button>
+        </Grid>
     </Grid>
 </UserControl>
