--- a/Maze/GuiInterface/Views/CaveView.axaml
+++ b/Maze/GuiInterface/Views/CaveView.axaml
@@ -85,7 +85,7 @@
                 VerticalContentAlignment="Center"
                 Value="{Binding Size}"
                 Minimum="1"
-                Maximum="{Binding DeadLimit, Mode=OneWay}"
+                Maximum="{Binding DeathLimit, Mode=OneWay}"
                 Increment="1"
                 FontSize="10">
             </NumericUpDown>
